<resources>
    <string name="app_name">Alkolmetre</string>
    <string name="error_message">Results could not be fetched!</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="category">Categories</string>
    <string name="beer">BEER</string>
    <string name="wine">WINE</string>
    <string name="sprits">SPIRITS</string>
    <string name="search_in_detail">Search in Detail</string>
    <string name="title_activity_alcohol_list">Results</string>
    <string name="txt_alcohol_list_results">We found %d items</string>
    <string name="title_activity_search_in_detail">Search In Detail</string>
    <string name="search_in_detail_header_filter">Filter</string>
    <string name="search_in_detail_header_order">Order</string>
    <string name="search_in_detail_toggle_is_discontinued">is_discontinued</string>
    <string name="search_in_detail_toggle_is_vqa">is_vqa</string>
    <string name="search_in_detail_toggle_price">Price</string>
    <string name="search_in_detail_toggle_alcohol_content">Alcohol Content</string>
    <string name="search_in_detail_toggle_price_per_liter">Price Per Liter</string>
    <string name="title_activity_detail">Details</string>
    <string name="details">Details</string>
    <string name="product_details">Product Details</string>
    <string name="search_in_detail_search">Search</string>
    <string name="search_in_detail_select_category">Select a category</string>
    <string name="detail_activity_alcohol_percentage">Alcohol Percentage: </string>
    <string name="detail_activity_sugar_content">Sugar Content: </string>
    <string name="detail_activity_release_date">Release Date: </string>
    <string name="is_discontinued">is_discontinued</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string-array name="categories">
        <item>No category</item>
        <item>Beer</item>
        <item>Wine</item>
        <item>Spirit</item>
    </string-array>

    <string name="title_activity_favorite">Favorites</string>
    <string name="favorites">My Favorites</string>
    <string name="visit_favorites_notification_title">Visit your favorites!</string>
    <string name="visit_favorites_notification_body">What about visiting your favorites again!</string>
    <string name="recommend">Recommend</string>
    <string name="Okay">Okay!</string>
    <string name="no_thanks">No Thanks</string>
    <string name="alcohol_reminder">I Feel Lucky</string>
    <string name="alcohol_reminder_body">Do you want to learn a new drink?</string>
    <string name="i_feel_lucky">I Feel Lucky</string>
    <string name="notification_buttons">Notification Buttons</string>
</resources>
