<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/beer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beer"
            android:visibility="visible" />

        <Button
            android:id="@+id/wine_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wine"
            android:visibility="visible" />

        <Button
            android:id="@+id/sprits_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sprits"
            android:visibility="visible" />

        <Button
            android:id="@+id/recommend_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="testNotification"
            android:text="@string/recommend"
            android:visibility="visible" />

        <Button
            android:id="@+id/check_my_fav_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_feel_lucky"
            android:onClick="testNotification2"
            android:visibility="visible" />

    </LinearLayout>

    <Button
        android:id="@+id/search_in_details_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/search_in_detail"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>